fixed contrast issued; added aesthetic effects to question img; made lable font bigger upon checkin an option

--- a/styles/sass/_global.scss
+++ b/styles/sass/_global.scss
@@ -50,7 +50,7 @@ label {
     font-size: 0.8rem;
     letter-spacing: 0.7px;
     line-height: 30px;
-    color: $headerColor;
+    color: $labelColor;
     transition: all 0.8s ease;
 }
 
